# scim

./: .gitignore  Makefile.am  README  aide.txt  api.sed  api.sh  btrfs.c  code.sh  configure.ac  crew.txt  data.sh  host.txt  inittab  mkinitrd.sh  port.txt  rdinit.sh  scim_cell.c  scim_cpio.c  scim_crew.c  scim_data.c  scim_host.c  scim_loop.c  scim_lzma.c  scim_netlink.c  scim_netlink_address.c  scim_netlink_link.c  scim_note.c  scim_port.c  scim_root.c  scim_site.c  scim_task.c  scim_team.c  scim_term.c  scim_tool.c  shutd.c  srvc.c  srvcd.c  task.txt  test.c  ward.txt
scim/: api.h  btrfs.h  netlink.h  scim.h
